W.I.P: seperation of concerns, remove database access from worker